Bug 34768 - No update preview when selecting presentation models
Summary: No update preview when selecting presentation models
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86 (IA32) Linux (All)
: low minor
Assignee: Peter Rabi
URL:
Whiteboard:
Keywords:
: 35778 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-02-26 08:36 UTC by jbgurynospam
Modified: 2011-08-09 08:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
My proposed patch (1.22 KB, patch)
2011-08-06 10:12 UTC, Peter Rabi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jbgurynospam 2011-02-26 08:36:16 UTC
Hi everybody,

Overview : 
When we want to change diapo style in mask mode, Preview is not updated when selecting slides style.


Steps to Reproduce:

 1) Work into mask mode with your presentation
 2) Right-click, and choose "Slide design"
 3) On the new modal dialog, click on "Load.."
 4) From the new modal dialog, we can select models into categories, Click on "Plus" button on the right to extend the window
 5) Check the "Preview" Checkbox
 6) Select different styles into categories

Actual Results:
  No preview of the selected style.

Expected Results:
  Update Preview when changing selection

Workaround :

 1) Select your style
 1) Uncheck "Preview" checkbox
 3) Check "Preview" checkbox
Comment 1 jbgurynospam 2011-02-26 12:49:28 UTC
Comment :

Slide Master mode is not needed.

Just point on Format menu and choose Slide design. Follow the "Steps to reproduce" from the item 3

Bug confirmed on 3.3.1 release (on linux platform yet)
Comment 2 Peter Rabi 2011-08-05 03:01:22 UTC
*** Bug 35778 has been marked as a duplicate of this bug. ***
Comment 3 Peter Rabi 2011-08-06 10:12:07 UTC
Created attachment 49997 [details]
My proposed patch

The attached simple patch seems to solve the problem in all versions platform independently.

The changes are as follows.
 * Linked the already existing event handler of selecting a template.
 * Update the preview also when we select another region (like 'My Templates').