fix for fdo#34768 - no update preview

Fixes dialogue "Load Slide Design" in Impress.
The preview now updates when selecting another template in the listbox.
Contributed under license LGPLv3+/MPL.